<resources>
    <string name="app_name">DistanceTracker</string>
    <string name="button_to_start_recording">btn to start recording</string>
    <string name="button_to_reset_session">button to reset session</string>
    <string name="button_to_save_session">button to save session</string>
    <string name="total_distance">Total distance</string>
    <string name="session_time">Session time</string>
    <string name="average_speed">Average speed</string>
    <string name="_0_0km">0,00 km</string>
    <string name="_0_0_km_h">0,0 km/h</string>
    <string name="open_saved_tracks_list">open saved tracks list</string>
    <string name="start_session">Start session</string>
    <string name="distance_tracker"><i><b>Distance Tracker</b></i></string>
    <string name="_0h_0m_0s">0 h 0 m 0 s</string>
    <string name="recording"><u>Recording..</u></string>
    <string name="paused">Paused..</string>
    <string name="close_list_icon">close list icon</string>
    <string name="enter_route_name">Enter name (min 3 chars.)</string>
    <string name="save_session">Save session</string>
    <string name="cancel">Cancel</string>
    <string name="route_name">Route name</string>
    <string name="no_routes_saved">No routes saved!</string>
    <string name="map_icon">map icon</string>
    <string name="route_name_is_too_short_n_minimum_3_characters">Route name is too short!\n Minimum 3 characters!.</string>
    <string name="enable_auto_resume">Auto-Resume</string>
    <string name="enable_auto_pause">Auto-Pause</string>
    <string name="resume_session_if_movement_is_recognized_5_times_in_a_row">Resume session if movement is recognized 5 seconds in a row.</string>
    <string name="pause_session_if_distance_walked_is_too_low_5_times_in_a_row">Pause session if distance walked is too low for 10 seconds in a row</string>
    <string name="close">Close</string>
    <string name="average_speed_icon">average speed icon</string>
    <string name="distance_icon">distance icon</string>
    <string name="duration_icon">duration icon</string>
    <string name="gps">GPS</string>
    <string name="_0_m">0 m</string>
</resources>