<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">

    <LinearLayout style="@style/save_dialog_section_layout">

        <TextView
            style="@style/save_dialog_section_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/route_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/routeNameEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="route name"
                android:hint="@string/enter_route_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/routeNameWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/route_name_is_too_short_n_minimum_3_characters"
                android:textColor="@color/warning_red"
                android:textSize="11sp"
                android:visibility="gone" />
        </LinearLayout>


    </LinearLayout>

    <View style="@style/save_dialog_divider" />

    <LinearLayout style="@style/save_dialog_section_layout">

        <TextView
            style="@style/save_dialog_section_title"
            android:text="@string/total_distance" />

        <TextView
            android:id="@+id/totalDistance"
            style="@style/save_dialog_text" />
    </LinearLayout>

    <View style="@style/save_dialog_divider" />

    <LinearLayout style="@style/save_dialog_section_layout">

        <TextView
            style="@style/save_dialog_section_title"
            android:text="@string/session_time" />

        <TextView
            android:id="@+id/sessionTime"
            style="@style/save_dialog_text" />
    </LinearLayout>

    <View style="@style/save_dialog_divider" />

    <LinearLayout style="@style/save_dialog_section_layout">

        <TextView
            style="@style/save_dialog_section_title"
            android:text="@string/average_speed" />

        <TextView
            android:id="@+id/averageSpeed"
            style="@style/save_dialog_text" />
    </LinearLayout>

    <View style="@style/save_dialog_divider" />

    <LinearLayout style="@style/save_dialog_section_layout">

        <Button
            android:id="@+id/cancelBtn"
            style="@style/dialog_button"
            android:text="@string/cancel" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saveBtn"
            style="@style/dialog_button"
            android:alpha="0.3"
            android:text="@string/save_session" />
    </LinearLayout>
</LinearLayout>