<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_vertical|end"
        android:padding="15dp">

        <ImageButton
            style="@style/buttonLayout"
            android:src="@drawable/open_menu_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/textLayout"
                    android:text="@string/total_distance" />

                <TextView
                    android:id="@+id/totalDistance"
                    style="@style/textLayout"
                    android:text="@string/_0_0km" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/textLayout"
                    android:text="@string/recording_time" />

                <TextView
                    android:id="@+id/recordingTime"
                    style="@style/textLayout"
                    android:text="@string/_00_00_00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/textLayout"
                    android:text="@string/average_speed" />

                <TextView
                    android:id="averageSpeed"
                    style="@style/textLayout"
                    android:text="@string/_0_0_km_h" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                style="@style/buttonLayout"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/button_to_start_recording"
                android:src="@drawable/record_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <ImageButton
                    style="@style/buttonLayout"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/button_to_reset_session"
                    android:src="@drawable/reset_icon" />

                <ImageButton
                    style="@style/buttonLayout"
                    android:contentDescription="@string/button_to_save_session"
                    android:src="@drawable/save_icon" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>