<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/route_bg"
    android:gravity="center_vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/sessionName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sessionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            style="@style/session_list_info_container"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/session_list_info_icon"
                android:contentDescription="@string/distance_icon"
                android:src="@drawable/distance_icon" />

            <TextView
                android:id="@+id/sessionDistance"
                style="@style/session_layout_text"
                android:text="@string/_0_0km" />
        </LinearLayout>

        <LinearLayout
            style="@style/session_list_info_container"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/session_list_info_icon"
                android:contentDescription="@string/distance_icon"
                android:src="@drawable/duration_icon" />

            <TextView
                android:id="@+id/sessionDuration"
                style="@style/session_layout_text"
                android:text="@string/_0_0km" />
        </LinearLayout>

        <LinearLayout
            style="@style/session_list_info_container"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/session_list_info_icon"
                android:contentDescription="@string/distance_icon"
                android:src="@drawable/avg_icon" />

            <TextView
                android:id="@+id/sessionAvg"
                style="@style/session_layout_text"
                android:text="@string/_0_0km" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/showOnMapBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/route_bg"
        android:contentDescription="@string/map_icon"
        android:scaleType="centerCrop"
        android:src="@drawable/inspect_icon" />
</LinearLayout>